@@ -1,3 +1,6 @@
+* Mon Aug 8 2017 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.2-1
+- update to the latest cmake library of Elements (5.2)
+
 * Thu Aug 3 2017 Hubert Degaudenzi <Hubert.Degaudenzi@unige.ch> 3.1.3-1
 - hotfix: remove wrong import in the PlatformTest.py file.
 
